Deduplicate fields and outputs
Rough outline:

- Removes `fields` from `AnalyzedRelation`. There are only `outputs`

- Changes `Field` to `ScopedSymbol`, which is only added when a relation
  introduces a new scope. (E.g. in SELECT t1.x, t2.x FROM t AS t1, t AS
  t2, it is necessary to distinguish between t1.x and t2.x, so `AS t1`
  needs to introduce a scope)

- Adds `AliasSymbol` to preserve the `AS <xy>` information

- Merges `QueriedSelectRelation` and `MultiSourceSelect`. Also changes
  `QualifiedName` usages to `RelationName` - so that everything is unified to
  `RelationName` after the Analyzer.

- Changes the `LogicalPlanner` to only process the clauses of a relation that
  are really there. (Only `QueriedSelectRelation` can contain WHERE, GROUP BY,
  HAVING, etc...)