@@ -22,24 +22,23 @@
 
 package io.crate.expression.tablefunctions;
 
-import com.google.common.collect.ImmutableMap;
 import io.crate.analyze.relations.DocTableRelation;
-import io.crate.data.ArrayBucket;
-import io.crate.data.Bucket;
 import io.crate.data.Input;
 import io.crate.data.Row;
 import io.crate.expression.symbol.Function;
 import io.crate.expression.symbol.Symbol;
 import io.crate.metadata.CoordinatorTxnCtx;
 import io.crate.metadata.FunctionIdent;
-import io.crate.metadata.TransactionContext;
 import io.crate.metadata.Functions;
+import io.crate.metadata.RelationName;
+import io.crate.metadata.TransactionContext;
 import io.crate.metadata.tablefunctions.TableFunctionImplementation;
-import io.crate.sql.tree.QualifiedName;
 import io.crate.test.integration.CrateUnitTest;
 import io.crate.testing.SqlExpressions;
 import org.hamcrest.Matchers;
 import org.junit.Before;
+
+import java.util.Map;
 
 import static io.crate.testing.TestingHelpers.printedTable;
 import static org.mockito.Mockito.mock;
@@ -52,7 +51,7 @@ public abstract class AbstractTableFunctionsTest extends CrateUnitTest {
 
     @Before
     public void prepareFunctions() throws Exception {
-        sqlExpressions = new SqlExpressions(ImmutableMap.of(QualifiedName.of("t"), mock(DocTableRelation.class)));
+        sqlExpressions = new SqlExpressions(Map.of(new RelationName(null, "t"), mock(DocTableRelation.class)));
         functions = sqlExpressions.getInstance(Functions.class);
     }
 
