@@ -21,7 +21,6 @@
 
 package io.crate.lucene;
 
-import com.google.common.collect.ImmutableMap;
 import io.crate.analyze.WhereClause;
 import io.crate.analyze.relations.AnalyzedRelation;
 import io.crate.analyze.relations.TableRelation;
@@ -31,7 +30,6 @@ import io.crate.lucene.match.CrateRegexQuery;
 import io.crate.metadata.RelationName;
 import io.crate.metadata.doc.DocSchemaInfo;
 import io.crate.metadata.doc.DocTableInfo;
-import io.crate.sql.tree.QualifiedName;
 import io.crate.testing.SQLExecutor;
 import io.crate.testing.SqlExpressions;
 import io.crate.types.DataType;
@@ -85,7 +83,7 @@ public class CommonQueryBuilderTest extends LuceneQueryBuilderTest {
                 clusterService);
 
             TableRelation tableRelation = new TableRelation(tableInfo);
-            Map<QualifiedName, AnalyzedRelation> tableSources = ImmutableMap.of(new QualifiedName(tableInfo.ident().name()), tableRelation);
+            Map<RelationName, AnalyzedRelation> tableSources = Map.of(tableInfo.ident(), tableRelation);
             SqlExpressions sqlExpressions = new SqlExpressions(tableSources, tableRelation, new Object[]{null}, User.CRATE_USER);
 
             Query query = convert(sqlExpressions.normalize(sqlExpressions.asSymbol("x = ?")));
@@ -476,27 +474,27 @@ public class CommonQueryBuilderTest extends LuceneQueryBuilderTest {
         assertThat(
             convert("ts_array[1] = 1129224512000").toString(),
             is("+ts_array:[1129224512000 TO 1129224512000] " +
-                "#subscript(Ref{doc.users.ts_array, timestamp with time zone_array}, 1) = 1129224512000")
+                "#(ts_array[1] = 1129224512000)")
         );
         assertThat(
             convert("ts_array[1] >= 1129224512000").toString(),
             is("+ts_array:[1129224512000 TO 9223372036854775807] " +
-                "#subscript(Ref{doc.users.ts_array, timestamp with time zone_array}, 1) >= 1129224512000")
+                "#(ts_array[1] >= 1129224512000)")
         );
         assertThat(
             convert("ts_array[1] > 1129224512000").toString(),
             is("+ts_array:[1129224512001 TO 9223372036854775807] " +
-                "#subscript(Ref{doc.users.ts_array, timestamp with time zone_array}, 1) > 1129224512000")
+                "#(ts_array[1] > 1129224512000)")
         );
         assertThat(
             convert("ts_array[1] <= 1129224512000").toString(),
             is("+ts_array:[-9223372036854775808 TO 1129224512000] " +
-                "#subscript(Ref{doc.users.ts_array, timestamp with time zone_array}, 1) <= 1129224512000")
+                "#(ts_array[1] <= 1129224512000)")
         );
         assertThat(
             convert("ts_array[1] < 1129224512000").toString(),
             is("+ts_array:[-9223372036854775808 TO 1129224511999] " +
-                "#subscript(Ref{doc.users.ts_array, timestamp with time zone_array}, 1) < 1129224512000")
+                "#(ts_array[1] < 1129224512000)")
         );
     }
 
@@ -504,7 +502,7 @@ public class CommonQueryBuilderTest extends LuceneQueryBuilderTest {
     public void testObjectArrayAccessResultsInFunctionQuery() {
         assertThat(
             convert("o_array[1] = {x=1}").toString(),
-            is("subscript(Ref{doc.users.o_array, object_array}, 1) = {x=1}")
+            is("(o_array[1] = {\"x\"=1})")
         );
     }
 
@@ -529,7 +527,7 @@ public class CommonQueryBuilderTest extends LuceneQueryBuilderTest {
         // termQuery for obj.x; nothing for obj.z because it's missing in the mapping
         assertThat(
             convert("obj = {x=10, z=20}").toString(),
-            is("+obj.x:[10 TO 10] #Ref{doc.users.obj, object} = {x=10, z=20}")
+            is("+obj.x:[10 TO 10] #(obj = {\"x\"=10, \"z\"=20})")
         );
     }
 
@@ -545,7 +543,7 @@ public class CommonQueryBuilderTest extends LuceneQueryBuilderTest {
     public void testEqAnyOnNestedArray() {
         assertThat(
             convert("[1, 2] = any(o_array['xs'])").toString(),
-            is("+o_array.xs:{1 2} #any_=([1, 2], Ref{doc.users.o_array['xs'], integer_array_array})")
+            is("+o_array.xs:{1 2} #([1, 2] = ANY(o_array['xs']))")
         );
     }
 
